<resources>
    <string name="app_name">Astross</string>
    <string name="aries">Aries</string>
    <string name="tauro">Taurus</string>
    <string name="geminis">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpio">Scorpio</string>
    <string name="sagitario">Sagitarius</string>
    <string name="capricornio">Capricorn</string>
    <string name="acuario">Aquarius</string>
    <string name="piscis">Pisces</string>
    <string name="aries_f">21 Mar - 20 Apr</string>
    <string name="tauro_f">21 Apr - 20 May</string>
    <string name="geminis_f">21 May - 20 Jun</string>
    <string name="cancer_f">21 Jun - 20 Jul</string>
    <string name="leo_f">21 Jul - 20 Aug</string>
    <string name="virgo_f">21 Aug - 20 Sep</string>
    <string name="libra_f">21 Sep - 20 Oct</string>
    <string name="escorpio_f">21 Oct - 20 Nov</string>
    <string name="sagitario_f">21 Nov - 20 Dec</string>
    <string name="capricornio_f">21 Dec - 20 Jan</string>
    <string name="acuario_f">21 Jan - 19 Feb</string>
    <string name="piscis_f">20 Feb - 20 Mar</string>
    <string name="sdiario">Daily horoscope</string>
    <string name="ssemanal">Week horoscope</string>
    <string name="scomp">Compatibility</string>
    <string name="snum">Lucky numbers</string>
    <string name="sfondos">Wallpapers</string>
    <string name="spnl">PNL</string>
    <string name="srecom">" Refer this item to a friend"</string>
    <string name="about">About of …</string>
    <string name="aries_elemento">Fire</string>
    <string name="aries_descripcion">An Aries is a person full of energy and enthusiasm. Pioneer and adventurer, he loves challenges, freedom and new ideas. The Aries like to lead and prefer to give instructions to receive them. They are independent and concerned about their own ambition and goals. They have an enviable energy that sometimes leads them to be aggressive, restless, argumentative, stubborn. It is easy to offend the Aries and, when they feel offended, it is difficult to make peace with them.</string>
    <string name="tauro_elemento">Earth</string>
    <string name="tauro_descripcion">Taurus is usually practical, decisive and has great willpower. Taurus are stable and conservative people, and they will follow loyally a leader they trust. They love peace and tranquility and are very respectful of the laws and rules. They respect material values ​​and avoid debts. They are a bit reluctant to change.</string>
    <string name="tauro_cualidades">Paciente, persistente, decidido y fiable. A un tauro le encanta sentirse seguro. Tiene buen corazón y es muy cariñoso. A tauro le gusta la estabilidad, las cosas naturales, el placer y la comodidad. Los tauro disfrutan con tiempo para reflexionar y les encanta sentirse atraído hacía alguien. </string>
    <string name="tauro_defectos">" Jealous and possessive, a taurus may tend to be inflexible and resentful. Sometimes the Taurus sin of being greedy and allowing it all. Taurus does not like interruptions or rushing. Nor do Taurus like false things. They do not like to feel pressured and can not stand being at home too long."</string>
    <string name="geminis_elemento">Air</string>
    <string name="geminis_descripcion">Gemini is the sign of the twins and as such their character is double and quite complex and contradictory. On the one hand it is versatile, but on the other it can be insincere. They tend to have elegance and fall into the mistakes of young people. They have happiness, self-centeredness, imagination and restlessness in children. The Gemini start new activities and challenges with enthusiasm, but many times they lack the constancy to carry them out. They consider that life is like a game and they look for fun and new situations.</string>
    <string name="geminis_cualidades">" Adaptability and versatility. Gemini are intellectual, eloquent, affectionate, communicative and intelligent. They have a lot of energy and vitality. A Gemini likes to talk, read, do several things at once. They enjoy different and novel things. The more variety in your life, the better."</string>
    <string name="geminis_defectos">" Superficiality and inconstancy. Gemini tend to be nervous and tense at times and can become calculating and demanding. Gemini does not like loneliness. Feeling tied to a situation or a place. He does not enjoy learning at school, but he also does not like to be mentally inactive."</string>
    <string name="cancer_elemento">Water</string>
    <string name="cancer_descripcion">The character of a cancer is the least clear of all the signs of the zodiac. A cancer can be from shy and boring to bright and famous. Cancer is conservative and they love the security and warmth of their home. In fact for men cancer, their home is like a nest, a refuge to go to when the stress of their work is too much. The house of a Cancer tends to be your personal refuge rather than a showcase to dazzle others.</string>
    <string name="cancer_cualidades">Cancer is emotional and affectionate, protective and friendly. A Cancer has a lot of imagination and intuition. You know to be cautious when needed. Cancer likes his house, the countryside, the children. He likes to enjoy his hobbies and he likes parties. A cancer also likes romance.</string>
    <string name="cancer_defectos">Cancer has a tendency to bad mood, they are calculating, disorderly and self-compassionate. Changes his mood and is very susceptible. He struggles to leave a situation. A cancer does not like failure, advice or conflict situations. He does not like people who take the opposite, or to tell him what he has to do.</string>
    <string name="leo_elemento">Fire</string>
    <string name="leo_descripcion">They have ambition, strength, courage, independence and total security in their abilities. They do not usually have doubts about what to do. They are leaders without complications - they know where they want to go and they put all their effort, energy and creativity into achieving their goal. They do not fear obstacles - rather they grow before them.</string>
    <string name="leo_cualidades">Generous and kind, faithful and affectionate. A leo is creative and enthusiastic and understanding with others. He likes adventure, luxury and comfort. A leo enjoys children, theater and parties. The risk motives him too.</string>
    <string name="leo_defectos">Overbearing and bossy. It can be intolerant and dogmatic. It tends to interfere when it should not. Leo does not like vulgar and everyday life. Escape from selfish and ill-conceived people and do not like routine or security.</string>
    <string name="virgo_elemento">Earth</string>
    <string name="virgo_descripcion">Virgo, the only sign represented by a woman, is a sign characterized by its precision, its conventionality, its reserved attitude and its eagerness, sometimes even obsession, with cleanliness. Virgos are often observers and patients. They can sometimes seem cold, and in fact they have a hard time making great friends.</string>
    <string name="virgo_cualidades">Modesty, intelligence and shyness. Virgo are usually meticulous, practical and hardworking. They have great analytical capacity and are reliable. Virgo likes healthy living, making lists, order and hygiene.</string>
    <string name="libra_elemento">Air</string>
    <string name="libra_descripcion">Libra are among the most civilized signs of the zodiac. They have charm, elegance and good taste, and are friendly and peaceful. They like beauty and harmony and are able to be impartial in conflicts. However, once they have reached an opinion about something, they do not like to be contradicted. They like to have the support of others.</string>
    <string name="libra_cualidades">" Diplomatic, charming and sociable. Libra are idealists, pacifists, optimists and romantics. They have a gentle and balanced character."</string>
    <string name="libra_defectos">They are undecided and easily influenced by third parties. They can change their opinion easily and be too complacent.</string>
    <string name="escorpio_elemento">Water</string>
    <string name="escorpio_descripcion">Scorpio is an intense sign with a unique emotional energy throughout the zodiac. Although they may seem calm, the Scorpios have an internal magnetism hidden inside. They are affable, good tertulianos, reserved and polite, but although they seem to be something withdrawn from the activity center, in fact they are observing everything with their critical eye.</string>
    <string name="escorpio_cualidades">Emotional, determined, powerful and passionate. Scorpio is a sign with a lot of magnetism. Scorpio likes the truth, work when it makes sense, get involved in causes and convince others.</string>
    <string name="escorpio_defectos">Jealous, compulsive and obsessive. The scorpions can be resentful and stubborn. A Scorpio does not like the superficial, meaningless relationships. He does not accept easy compliments and does not support people teasing him.</string>
    <string name="sagitario_elemento">Fire</string>
    <string name="sagitario_descripcion">Sagittarius is one of the most positive signs of the zodiac. They are versatile and love adventure and the unknown. They have an open mind to new ideas and experiences and maintain an optimistic attitude even when things get difficult. They are reliable, honest, good and sincere and willing to fight for good causes at all costs.</string>
    <string name="sagitario_cualidades">Intellectual, honest, sincere and friendly. Sagittarians are characterized by optimism, modesty and good humor. Saita likes freedom, travel, adventure and the ability to understand.</string>
    <string name="sagitario_defectos">They are so optimistic at times that they become irresponsible. Superficial, careless and restless. Sagittarius does not like being tied to a situation, having to worry about the details.</string>
    <string name="capricornio_elemento">Earth</string>
    <string name="capricornio_descripcion">Capricorn is one of the most stable, safe and calm signs of the zodiac. They are workers, responsible and practical and willing to persist until necessary to achieve their objective. They are reliable and often have the role of finishing a project initiated by one of the most pioneering signs. They love music.</string>
    <string name="capricornio_cualidades">Capricorn are ambitious, disciplined, practical, prudent, and patient. They have a good sense of humor and are reserved. A Capricorn likes reliability, professionalism, a solid foundation, having a goal, leadership.</string>
    <string name="aries_diario">Planets support you all you need to cut your ties and go to the bottom of things today. The planets are creating some resistance for the subjects of the race you can think that you do not progress as much as you would like. You do not have the patience to get online today. Your attention should be turned towards a creative or business project. The conditions are particularly propitious now and you should not miss the opportunity. You go fast in your career and it drives you crazy what you do. You have time for something else and you run the risk of things losing their balance.</string>
    <string name="elemento">Element:</string>
    <string name="descripcion">Description:</string>
    <string name="virtudes">Righteousness</string>
    <string name="defectos">Defect:</string>
    <string name="numeros_de_suerte">" lucky number"</string>
    <string name="chance">Play the chance</string>
    <string name="baloto">Play the baloto</string>
    <string name="Frases">phrase of the day</string>
</resources>