<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sime.itanortegaortega.astross.DiarioActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/fnd">
            <ImageView
                android:id="@+id/ImgBanner"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/aries"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="18dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingRight="15dp">
                <TextView
                    android:id="@+id/Txt_Nombre_Signo_Banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aries"
                    style="@style/tit1"/>
                <TextView
                    android:id="@+id/Txt_Fechas_Banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aries_f"
                    style="@style/tit2"
                    />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/cardGeneral">
                    <TextView
                        android:id="@+id/Txt_FechaHoy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aries"
                        style="@style/titulo1"/>

                    <TextView
                        android:id="@+id/Txt_Diario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aries_diario"
                        style="@style/texto1"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
